# lambda-service-template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: Dockerfile
infra/: main.tf  outputs.tf  variables.tf
infra/modules/cloudwatch/: main.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
